fixed User managment bugs

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,12 +7,12 @@
     Email: <input type="email" name="email">
   </div>
   *email has to be within logitech.com domain</p>
-  <p><div>
+  <div>
     Password: <input type="password" name="password">
-  </div></p>
-  <p><div>
+  </div>
+  <div>
     Confirm Password: <input type="password" name="password_confirmation">
-  </div></p>
+  </div>
   <p><div>
     Location: <input type="text" name="location">
   </div></p>
