--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,11 +44,11 @@
             </li>
           </ul> -->
           
-
+<!-- 
           <%= form_tag "/search", method: :post do %>
             <%= text_field_tag :serach %>
             <%= submit_tag "Search"%>
-          <% end %>
+          <% end %> -->
 
 
         
@@ -82,6 +82,8 @@
           <% if current_user %>
             <li>Hello <%= current_user.name %> !</li>
           <% end %>
+            <a class="navbar-brand" href="/available">Show available devices only</a>>
+
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Sort by os version <span class="caret"></span></a>
               <ul class="dropdown-menu">
