--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/logout">Log Out</a>
-            <a class="navbar-brand" href="//users/<%= current_user.id %>/edit">Edit profile</a>
+            <a class="navbar-brand" href="/users/<%= current_user.id %>/edit">Edit profile</a>
           </div>
 
         <% else %>
