--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -27,19 +27,13 @@
     Active <input type="text" name="active">
   </div>
   <div> 
-    Description <input type="text" name="description">
+    Phone Number <input type="text" name="phone_number">
   </div>
   <div> 
-    Description <input type="text" name="description">
+    OS <input type="text" name="ios">
   </div>
   <div> 
-    Description <input type="text" name="description">
-  </div>
-  <div> 
-    Description <input type="text" name="description">
-  </div>
-  <div> 
-    Description <input type="text" name="description">
+    Image (URL) <input type="text" name="description">
   </div>
   <input type="submit" value="Post!">
 
