modified grid on index page

--- a/app/assets/stylesheets/devices.scss
+++ b/app/assets/stylesheets/devices.scss
@@ -14,7 +14,14 @@
     font-size: 20px;
 }
 
-
+h5 {
+      font-family: Wallpoet;
+      font-size: 14px;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: 500;
+      line-height: 26.4px;
+    }
 
 /*If I ever want to play with fonts for each class
 I can do it here*/
@@ -141,5 +148,5 @@ body {
 
 
 .well img {
-  width: 300px;
+  width: 130px;
 }
