--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,8 +12,9 @@
   <br>
     Confirm Password: <input type="password" name="password_confirmation">
   <br>
-  <br>
-    Location: <input type="text" name="location">
-  <br>
-  <br><input type="submit" value="Submit"><br>
+  <br>Location: <select name="location">
+    <option value="SVC">SVC</option>
+    <option value="Camas">Camas</option>
+  </select>
+  <br><br><button type="submit" class="btn btn-primary">Submit</button>
 <% end %>
