--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -2,7 +2,7 @@
   <div ng-controller="musicCtrl" ng-init="setup()">
 
 
-<h1> All available devices </h1>
+
 
 
 
@@ -18,64 +18,31 @@
       <option ng-repeat="device in devices">{{device.model}}</option>
     </datalist>
 
-
-    <h1> All Devices:</h1>
+    <h1> All available devices </h1>
     <br> Generic filter: <input ng-model="genericFilter">
     <br> Filter by model: <input ng-model="deviceFilter" list="deviceModels">
-    <br>
-    <div>
-      <table style="width:100%", border=1>
-        <tr>
-          <th><button ng-click="toggleOrder('chord')">Chord</button></th>
-          <th><button ng-click="toggleOrder('key')">Instrument</button></th> 
-          <th><button ng-click="toggleOrder('key')">Key</button></th>
-        </tr>
-        <tr ng-repeat="devices in devices | filter: genericFilter | filter: {instrument: deviceFilter} ">
-          <td>{{ device.manufacturer }}</td>
-          <td>{{ device.model }}</td>
-          <td>{{ device.os_version }}</td>
-        </tr>
-      </table>
-    </div>
-  </div>  
-</div>
-<br>=============
 
 
 
-
-
-
-
-
-
-
-<% @devices.each_slice(3) do |three_devices| %>
+<br> <br>
+<% @devices.each_slice(6) do |six_devices| %>
 
   <div class="row">
 
-    <% three_devices.each do |device| %>
-      <div class="col-md-4">
+    <% six_devices.each do |device| %>
+      <div class="col-sm-2">
         <div class="well"> 
           <a href="/devices/<%= device.id %> "><img src="<%= device.image %>"> </a>
-          <h3> <%= device.manufacturer %> <%= device.model %> 
-               <p> OS version: <%= device.os_version %> </p>
-               <p> Screen: <%= device.screen %> dpi </p>
-               <p> Located at: <%= device.location %></p>
-          </h3>
-          <div class="row"> 
-            <div class="col-sm-3">
-            </div>
-            <% if current_user && current_user.admin %>
-              <div class="col-sm-3">
-              <%= button_to "Edit", {action: "edit", id: device.id}, method: :get %> 
-              </div>
-              <div class="col-sm-3">
-              <%= button_to "Delete", {action: "destroy", id: device.id}, method: :delete, data: { confirm: "Are you sure?" } %>
-              </div>
-            <% end %>
-            </div>
-          </div>
+         <h5>
+           <%= device.manufacturer %> <%= device.model %> 
+           <br> OS version: <%= device.os_version %>
+           <br> Screen: <%= device.screen %> dpi
+           <br> Located at: <%= device.location %>
+         </h5>
+        </div>
+          <% if current_user && current_user.admin %>
+            <%= button_to "Edit", {action: "edit", id: device.id}, method: :get %> 
+          <% end %>
       </div>
     <% end %>
 
