--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,68 +15,27 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">All</a>
-        </div>
-
-
-
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Don't click</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul> -->
-          
 <!-- 
-          <%= form_tag "/search", method: :post do %>
-            <%= text_field_tag :serach %>
-            <%= submit_tag "Search"%>
-          <% end %> -->
-
-
+          </button>
+          <a class="navbar-brand" href="/">LogiShelf</a> -->
+        </div>
+        <nav class="navbar navbar-light bg-faded">
+          <a class="navbar-brand" href="/">
+            <img src="https://media.licdn.com/media-proxy/ext?w=800&h=800&hash=YWjkUQ1WfQolclthgBglwiUmJvY%3D&ora=1%2CaFBCTXdkRmpGL2lvQUFBPQ%2CxAVta9Er0VC6g1UQzR436bqE40y_6QgIaY3bDS-gXCzFporXPxizJpWZIPb0ugdWLw" width="30" height="30" class="d-inline-block align-top" alt="">
+            LogiShelf
+          </a>
+        </nav>
         
         <% if current_user %>
-
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
             <a class="navbar-brand" href="/logout">Log Out</a>
             <a class="navbar-brand" href="/users/<%= current_user.id %>/edit">Edit profile</a>
           </div>
-
         <% else %>
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
             <a class="navbar-brand" href="/login">Log In</a>
             <a class="navbar-brand" href="/signup">Create an Account</a>
           </div>
-
         <% end %>
           
           <ul class="nav navbar-nav navbar-right">
