--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -26,6 +26,6 @@
   Confirm Password: <input type="password" name="password_confirmation">
 
 
-  <input type="submit" value="Save changes">
+  <br><input type="submit" value="Save changes">
 
 <% end %>
