added temporary page for not existing functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Categories <span class="caret"></span></a>
             <ul class="dropdown-menu">
 
-              <li><a href="/categories/ios"> iOS </a></li>
-              <li><a href="/categories/android"> Android </a></li>
+              <li><a href="/?filter=ios"> iOS </a></li>
+              <li><a href="/?filter=android"> Android </a></li>
               <li role="separator" class="divider"></li>
               <li><a href="/categories/windows"> Windows </a></li>
             </ul>
