FIxed defect where device model were not saving into DB, when user creates a new device

--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -15,7 +15,7 @@
     Manufacturer <input type="text" name="manufacturer">
   </div>
   <div> 
-    Model <input type="text" name="Model">
+    Model <input type="text" name="model">
   </div>
   <div> 
     OS Version <input type="text" name="os_version">
